# app/Models/User.php
@@ -7,7 +7,22 @@ use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Foundation\Auth\User as Authenticatable;
 use Illuminate\Notifications\Notifiable;
 use Laravel\Sanctum\HasApiTokens;
+use OpenApi\Annotations as OA;
 
+/**
+ * @OA\Schema(
+ *     schema="User",
+ *     type="object",
+ *     required={"name","email","password"},
+ *     @OA\Property(property="id",type="integer"),
+ *     @OA\Property(property="name",type="string"),
+ *     @OA\Property(property="email_verified_at",type="datetime"),
+ *     @OA\Property(property="password",type="string<Hash>"),
+ *     @OA\Property(property="remember_token",type="string<Token>"),
+ *     @OA\Property(property="created_at",type="datetime"),
+ *     @OA\Property(property="updated_at",type="datetime"),
+ * )
+ */
 class User extends Authenticatable
 {
     use HasApiTokens, HasFactory, Notifiable;
